# modqn-paper-reproduction

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
artifacts/: README.md  cross-repo-integration-handoff-2026-04-19.md  modqn-current-direction-2026-04-22.md  phase-01b-closeout-status-2026-04-14.md  phase-01b-slice-b-bounded-status-2026-04-14.md  phase-01c-closeout-status-2026-04-15.md  phase-01d-reopen-trigger-check-2026-04-15.md  phase-01d-reopen-trigger-check-2026-04-16-producer-diagnostics.md  phase-01d-reopen-trigger-check-2026-04-22-beam-semantics.md  phase-01e-beam-semantics-status-2026-04-22.md  phase-01f-bounded-pilot-status-2026-04-22.md  phase-01f-slice-01f1-status-2026-04-22.md  phase-01g-atmospheric-sign-status-2026-04-22.md  phase-03b-producer-diagnostics-export-status-2026-04-16.md  phase-04-current-state-2026-04-19.md  phase-04-integration-readiness-2026-04-19.md  phase-04a-semantic-golden-status-2026-04-17.md  phase-04b-training-artifact-model-status-2026-04-19.md  phase-04c-bundle-layer-split-status-2026-04-19.md  phase-04d-runtime-spine-split-status-2026-04-19.md  phase-04e-sweep-analysis-plotting-split-status-2026-04-19.md  public-summary-2026-04-13.md  public-summary-2026-04-14-phase-01b-closeout.md  public-summary-2026-04-15-phase-01c-closeout.md  read-only-audit-2026-04-22-baseline-contract-vs-reopen.md  reproduction-status-2026-04-12.md  reproduction-status-2026-04-13-phase-03a-slice-a.md  reproduction-status-2026-04-13.md
configs/: catfish-modqn-phase-04-b-control.resolved.yaml  ee-modqn-phase-03-control-pilot.resolved.yaml  (+72 more)
(+321 files in other folders)
