[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modqn-paper-reproduction"
version = "0.1.0"
description = "Standalone Python-first MODQN baseline reproduction and training surface for PAP-2024-MORL-MULTIBEAM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.2",
]
test = [
  "pytest>=9.0,<10",
]

[project.scripts]
modqn-train = "modqn_paper_reproduction.cli:train_main"
modqn-sweeps = "modqn_paper_reproduction.cli:sweep_main"
modqn-export = "modqn_paper_reproduction.cli:export_main"
modqn-catfish-phase05a = "modqn_paper_reproduction.cli:catfish_phase05a_multi_buffer_main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
